@@ -250,6 +250,7 @@ global variables.
 A Smarty data object can be created as follows:
 $data = new Smarty_Data;          // create root data object
 $data->assign('foo','bar');       // assign variables as usual
+$data->conf_load('my.conf');									 // load config file    
 
 $data= new Smarty_Data($smarty);  // create data object having a parent link to
 the Smarty object
@@ -266,7 +267,8 @@ The first parameter can be a template name, a smarty object or a data object.
 
 Examples:
 $tpl = $smarty->createTemplate('mytpl.tpl'); // create template object not linked to any parent
-$tpl->assign('foo','bar');                   // directly assign variables    
+$tpl->assign('foo','bar');                   // directly assign variables
+$tpl->conf_load('my.conf');									 // load config file    
 
 $tpl = $smarty->createTemplate('mytpl.tpl',$smarty);  // create template having a parent link to the Smarty object
 $tpl = $smarty->createTemplate('mytpl.tpl',$data);    // create template having a parent link to the $data object
