@@ -1,27 +1,0 @@
-<?php
-
-/**
-* Smarty methode Config_Load
-* 
-* Loads a config file
-* 
-* @package Smarty
-* @subpackage Config
-* @author Uwe Tews 
-*/
-
-/**
-* load a config file optionally load just selected sections
-* 
-* @param object $smarty 
-* @param string $config_file filename
-* @param mixed $sections array of section names, single section or null
-*/
-function  Smarty_Method_Config_Load($smarty, $config_file, $sections = null)
-{ 
-    // load Config class
-    $config = new Smarty_Internal_Config($config_file, $smarty);
-    $config->loadConfigVars($sections, $smarty);
-} 
-
-?>
